[tool.poetry]
name = "qnxmount"
description = "read only mounters for qnx filesystems"
version = "0.1.9"
readme = "README.md"
license = "Apache-2.0"
authors = ["Francis Hoogendijk <f.hoogendijk@nfi.nl>", "Anda Knol <a.knol@nfi.nl>"]
repository = "https://github.com/NetherlandsForensicInstitute/qnxmount"

[tool.poetry.dependencies]
python = "^3.7"
crcmod = "^1.7"
fusepy = "^3.0.1"
kaitaistruct = "^0.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
